--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 
 <h1>Nicholas A. Mesa</h1>
 
-<p>Hi there! My name is Nick and welcome to my personal and academic website!</p>
+<p>Hi there! My name is Nick Mesa and welcome to my personal and academic website!</p>
+
+<a href="https://ambientweather.net/dashboard">Miami Personal Weather Station</a>
 
 </body>
 </html>
+
