--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>Hi there! My name is Nick Mesa and welcome to my personal and academic website!</p>
 
-<a href="https://ambientweather.net/dashboard">Miami Personal Weather Station</a>
+<a href="https://ambientweather.net/dashboard">Miami,FL Personal Weather Station</a>
 
 </body>
 </html>
