--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <p>Hi there! My name is Nick Mesa and welcome to my personal and academic website!</p>
 
-<a href="https://ambientweather.net/dashboard">Miami,FL Personal Weather Station</a>
+<p>
+    Miami,FL Personal Weather Station<a href="https://ambientweather.net/dashboard">Mesa Weather Station</a>
+    </p>
 
 </body>
 </html>
