--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 
 <p>Hi there! My name is Nick Mesa and welcome to my personal and academic website!</p>
 
+<figure>
+  <img src="figure.png" alt="Trulli" style="width:100%">
+  <figcaption>Fig.1 - Trulli, Puglia, Italy</figcaption>
+</figure>
+
 </body>
 </html>
 
