--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <p>Hi there! My name is Nick Mesa and welcome to my personal and academic website!</p>
 
 <figure>
-  <img src="figure.png" alt="Trulli" style="width:100%">
-  <figcaption>Fig.1 - Trulli, Puglia, Italy</figcaption>
+  <img src="figure.png" alt="Summed Total Group Energy" style="width:100%">
 </figure>
 
 </body>
