--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    h1 {
+      margin-top: 20px;
+      color: #343a40;
+    }
+    p {
+      color: #6c757d;
+    }
+  </style>
+</head>
 <body>
 
-<h1>Nicholas A. Mesa</h1>
+<h1> Nicholas A. Mesa</h1>
 
-<p>Hi there! My name is Nick Mesa and welcome to my personal and academic website!</p>
+<p>Hi there, my name is Nick Mesa and welcome to my personal and academic website!</p>
 
 <figure>
   <img src="figure.png" alt="Summed Total Group Energy" style="width:100%">
