--- a/index.html
+++ b/index.html
@@ -16,18 +16,31 @@
     p {
       color: #6c757d;
     }
+    .top-right-image {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 100px; /* Adjust the width as needed */
+    }
   </style>
 </head>
 <body>
 
-<h1> Nicholas A. Mesa</h1>
+<img src="headshot.JPG" alt="Top Right Image" class="top-right-image">
 
-<p>Hi there, my name is Nick Mesa and welcome to my personal and academic website!</p>
+<div class="container mt-5">
+  <div class="text-center">
+    <h1>Nicholas A. Mesa</h1>
+    <p>Hi there! My name is Nick Mesa and welcome to my personal and academic website!</p>
+    <figure>
+      <img src="figure.png" alt="Summed Total Group Energy" class="img-fluid">
+    </figure>
+  </div>
+</div>
 
-<figure>
-  <img src="figure.png" alt="Summed Total Group Energy" style="width:100%">
-</figure>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
 
