--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     <h1>Nicholas A. Mesa</h1>
     <p>Hi there! My name is Nick Mesa and welcome to my personal and academic website!</p>
     <figure>
-      <img src="figure.png" alt="Summed Total Group Energy" class="img-fluid">
+      <img src="timeseries.png" alt="Summed Total Group Energy" class="img-fluid">
+    </figure>
+      <figure>
+      <img src="map.png" alt="Total Group Energy" class="img-fluid">
     </figure>
   </div>
 </div>
